--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Youtube Clone</title>
         <link rel="stylesheet" href="youtube-css/video.css ">
         <link rel="stylesheet" href="youtube-css/general.css">
